--- a/Wasfat/aspnet-core/src/Wasfat.Domain/Entity Arrow Diagram.html
+++ b/Wasfat/aspnet-core/src/Wasfat.Domain/Entity Arrow Diagram.html
@@ -15,9 +15,13 @@
     <li class="node" data-node-id="5" data-x="0" data-y="451.8182373046875">
         <span class="caption">Comment</span>
     </li>
+    <li class="node" data-node-id="6" data-x="480.37835693359375" data-y="451.8182373046875">
+        <span class="caption">Instruction</span>
+    </li>
     <li class="relationship" data-from="1" data-to="0"></li>
     <li class="relationship" data-from="1" data-to="2"></li>
     <li class="relationship" data-from="3" data-to="0"></li>
     <li class="relationship" data-from="3" data-to="4"></li>
     <li class="relationship" data-from="5" data-to="0"></li>
+    <li class="relationship" data-from="6" data-to="0"></li>
 </ul>
